--- a/src/components/ItemList/style.css
+++ b/src/components/ItemList/style.css
@@ -1,32 +1,30 @@
 
 .outblock{
   background:rgb(240, 237, 237);
-  padding: 5px;
   margin-left: 300px;
   margin-right: 300px;
-  margin-top: 5px; 
   text-align: left;
+
 }
 
-.outblock:hover {
+.outblock :hover{
   background:rgb(229, 229, 229);
-  padding: 5px;
-  margin-left: 300px;
-  margin-right: 300px;
-  margin-top: 5px; 
-  text-align: left;
 }
 
-.Show_Items_Num {
-  border: none;
-  text-align: left;
-  /* float: left; */
+.todolist {
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 2px;
+  padding-bottom: 2px; 
+  background:rgb(240, 237, 237);
 }
 
-.Show_done_Set {
-  border: none;
-  text-align: right;
-  /* float: right; */
+.todolist:hover .buttonStyle{
+  display:block;
+}
+
+.todolist:hover .buttonStyleT{
+  background:rgb(229, 229, 229);
 }
 
 .Show_done_Items {
@@ -38,8 +36,22 @@
 }
 
 .buttonStyle{
+  background:rgb(229, 229, 229);
+  border: none;
+  float: right;
+  margin-top: 2px;
+  display:none;
+}
+
+.buttonStyleTest{
+  display:none;
+}
+
+.buttonStyleT{
   background:rgb(240, 237, 237);
   border: none;
   float: right;
   margin-top: 2px;
+  display:block;
 }
+
