--- a/src/components/AddItem/style.css
+++ b/src/components/AddItem/style.css
@@ -4,9 +4,17 @@
   }
 
   .container > input{
-    font-size: 30px;
+    font-size: 20px;
+    border: none;
+    border-bottom:2px black solid;
+    background-color: rgb(240, 237, 237);
+    width:800px
   }
 
   .container > button{
-    font-size: 30px;
+    font-size: 20px;
+    border-bottom:2px black solid;
+    background-color: white;
+    width:100px
   }
+  
